--- a/kern/conf/config
+++ b/kern/conf/config
@@ -778,7 +778,7 @@ echo -n ' files.mk'
 	# Default: optimize.
 	BEGIN { debugflags="-O2"; }
 	$1=="debug" {
-	    debugflags="-g -Og";
+	    debugflags="-g -O0";
 	}
 	$1=="debugonly" {
 	    debugflags="-g";
